--- a/restaurant/src/main/res/layout/fragment_basket.xml
+++ b/restaurant/src/main/res/layout/fragment_basket.xml
@@ -62,9 +62,11 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/orderForm"
+            android:isScrollContainer="true"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:isScrollContainer="true">
+            android:visibility="gone"
+            tools:visibility="visible">
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/basketRecyclerView"
