--- a/restaurant/src/main/res/layout/fragment_basket.xml
+++ b/restaurant/src/main/res/layout/fragment_basket.xml
@@ -8,7 +8,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/topMenu"
         android:layout_width="match_parent"
-        android:layout_height="120dp"
+        android:layout_height="@dimen/d_120"
         android:background="@drawable/bg_rect_base"
         android:gravity="center"
         android:orientation="vertical"
