--- a/restaurant/src/main/res/layout/fragment_menu.xml
+++ b/restaurant/src/main/res/layout/fragment_menu.xml
@@ -9,7 +9,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="120dp"
+        android:layout_height="@dimen/d_120"
         android:background="@drawable/bg_rect_base"
         android:gravity="center"
         android:orientation="vertical">
