--- a/uikit/src/main/res/values/dimens.xml
+++ b/uikit/src/main/res/values/dimens.xml
@@ -13,4 +13,5 @@
     <dimen name="d_40">40dp</dimen>
     <dimen name="d_42">42dp</dimen>
     <dimen name="d_60">60dp</dimen>
+    <dimen name="d_120">120dp</dimen>
 </resources>
