Модуль ресторана на фрагментах

--- a/uikit/src/main/res/values/themes.xml
+++ b/uikit/src/main/res/values/themes.xml
@@ -7,5 +7,7 @@
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
-    <style name="Theme.Papino" parent="Base.Theme.Papino" />
+    <style name="Theme.Papino" parent="Base.Theme.Papino">
+        <item name="bottomNavigationStyle">@style/Widget.Papino.BottomNavigationView</item>
+    </style>
 </resources>
