--- a/uikit/src/main/res/values/themes.xml
+++ b/uikit/src/main/res/values/themes.xml
@@ -4,10 +4,12 @@
     <style name="Base.Theme.Papino" parent="Theme.Material3.DayNight.NoActionBar">
         <item name="background">@drawable/il_basket_backgroud</item>
         <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorPrimary">@color/backgroundTopColor</item>
+        <item name="inputComponent">@style/PaPino.Input.Base</item>
     </style>
 
     <style name="Theme.Papino" parent="Base.Theme.Papino">
         <item name="bottomNavigationStyle">@style/Widget.Papino.BottomNavigationView</item>
+        <item name="textInputStyle">@style/PaPino.Input.Base</item>
     </style>
 </resources>
