--- a/restaurant/src/main/res/layout/fragment_menu.xml
+++ b/restaurant/src/main/res/layout/fragment_menu.xml
@@ -12,41 +12,36 @@
         android:layout_height="@dimen/d_120"
         android:background="@drawable/bg_rect_base"
         android:gravity="center"
+        android:paddingHorizontal="@dimen/d_20"
         android:orientation="vertical">
 
         <ImageView
             android:id="@+id/logoMain"
             android:layout_width="140dp"
             android:layout_height="40dp"
-            android:layout_marginEnd="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/main_menu_logo" />
 
         <TextView
-            android:id="@+id/nameUserHello"
-            android:layout_width="180dp"
-            android:layout_height="20dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginBottom="20dp"
+            android:id="@+id/textViewUserName"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:textColor="@color/backgroundCardColor"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toLeftOf="@+id/logoMain"
+            app:layout_constraintEnd_toStartOf="@+id/logoMain"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="@+id/logoMain" />
 
         <TextView
-            android:id="@+id/countBonusUser"
-            android:layout_width="180dp"
-            android:layout_height="20dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="18dp"
+            android:id="@+id/textViewBonus"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/d_4"
             android:textColor="@color/backgroundButtonColor"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toLeftOf="@+id/logoMain"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintEnd_toStartOf="@+id/logoMain"
+            app:layout_constraintTop_toBottomOf="@+id/textViewUserName" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
