--- a/uikit/src/main/res/values/dimens.xml
+++ b/uikit/src/main/res/values/dimens.xml
@@ -2,6 +2,7 @@
 <resources>
     <dimen name="d_0">0dp</dimen>
     <dimen name="d_2">2dp</dimen>
+    <dimen name="d_4">4dp</dimen>
     <dimen name="d_6">6dp</dimen>
     <dimen name="d_10">10dp</dimen>
     <dimen name="d_12">12dp</dimen>
