--- a/restaurant/src/main/res/layout/fragment_basket.xml
+++ b/restaurant/src/main/res/layout/fragment_basket.xml
@@ -161,7 +161,7 @@
                 tools:text="90 000 сум" />
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/inputLayout"
+                android:id="@+id/inputAddress"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/d_30"
@@ -177,7 +177,6 @@
                 app:layout_constraintTop_toBottomOf="@+id/toPaySum">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/inputEditText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textAppearance="@style/PaPino.TextAppearances.Card.Title"
@@ -196,7 +195,7 @@
                 android:text="@string/checkout"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/inputLayout" />
+                app:layout_constraintTop_toBottomOf="@+id/inputAddress" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
 
