--- a/restaurant/src/main/res/layout/fragment_basket.xml
+++ b/restaurant/src/main/res/layout/fragment_basket.xml
@@ -5,47 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/topMenu"
-        android:layout_width="match_parent"
+    <ru.papino.uikit.components.headers.HeaderContainerComponent
+        android:id="@+id/headerContainer"
         android:layout_height="@dimen/d_120"
-        android:background="@drawable/bg_rect_base"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:paddingHorizontal="@dimen/d_20"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <ImageView
-            android:id="@+id/logoMain"
-            android:layout_width="140dp"
-            android:layout_height="40dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/main_menu_logo" />
-
-        <TextView
-            android:id="@+id/textViewUserName"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:textColor="@color/backgroundCardColor"
-            app:layout_constraintEnd_toStartOf="@+id/logoMain"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/logoMain" />
-
-        <TextView
-            android:id="@+id/textViewBonus"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/d_4"
-            android:textColor="@color/backgroundButtonColor"
-            app:layout_constraintEnd_toStartOf="@+id/logoMain"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textViewUserName" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_width="match_parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
@@ -53,7 +19,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/topMenu">
+        app:layout_constraintTop_toBottomOf="@+id/headerContainer">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/orderForm"
@@ -211,5 +177,14 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
 
-
+    <TextView
+        android:id="@+id/textViewLoader"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/backgroundLoaderColor"
+        android:gravity="center"
+        android:text="@string/loader_order_create_message"
+        android:textAppearance="@style/PaPino.TextAppearances.Loader"
+        android:textColor="@color/textSecondaryColor"
+        android:visibility="gone" />
 </androidx.constraintlayout.widget.ConstraintLayout>
