--- a/uikit/src/main/res/values/colors.xml
+++ b/uikit/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="backgroundButtonGreyMedium">#E0E0E0</color>
     <color name="backgroundNavigationColor">#424242</color>
     <color name="backgroundNoActiveColor">#969696</color>
+    <color name="backgroundLoaderColor">#99000000</color>
 
     <!-- Палитра для элементов экрана -->
     <color name="elementPrimaryColor">#FFFFFF</color>
