PAPINO-9 Обновление заказав через тянучку в низ

--- a/restaurant/src/main/res/layout/fragment_orders.xml
+++ b/restaurant/src/main/res/layout/fragment_orders.xml
@@ -28,13 +28,19 @@
         android:src="@drawable/il_no_orders"
         android:visibility="gone" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/ordersRecycler"
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swipeRefreshLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingHorizontal="@dimen/d_10"
-        android:paddingTop="@dimen/d_14"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+        android:layout_height="match_parent">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/ordersRecycler"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingHorizontal="@dimen/d_10"
+            android:paddingTop="@dimen/d_14"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
     <ru.papino.uikit.components.loaders.BaseLoaderComponent
         android:id="@+id/frameProgressIndicator"
