--- a/restaurant/src/main/res/layout/fragment_settings.xml
+++ b/restaurant/src/main/res/layout/fragment_settings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
@@ -17,21 +17,20 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             android:layout_margin="@dimen/d_20"
-            android:text="@string/profile_text" />
+            android:text="@string/settings_text" />
     </FrameLayout>
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/inputFirstName"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/d_10"
         android:layout_marginTop="@dimen/d_14"
-        android:layout_height="wrap_content"
         android:hint="@string/hint_reg_second_name">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:enabled="false"
             android:paddingHorizontal="@dimen/d_20"
             tools:text="10000" />
 
@@ -48,24 +47,6 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:enabled="false"
-            android:paddingHorizontal="@dimen/d_20"
-            tools:text="10000" />
-
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/inputPhone"
-        android:layout_marginHorizontal="@dimen/d_10"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/d_10"
-        android:hint="@string/hint_reg_phone">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:enabled="false"
             android:paddingHorizontal="@dimen/d_20"
             tools:text="10000" />
 
@@ -82,7 +63,6 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:enabled="false"
             android:paddingHorizontal="@dimen/d_20"
             tools:text="10000" />
 
@@ -90,23 +70,17 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingHorizontal="@dimen/d_20"
-        android:paddingBottom="@dimen/d_20">
+        android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/imageSettings"
-            android:layout_width="@dimen/d_40"
-            android:layout_height="@dimen/d_40"
-            android:layout_gravity="bottom|end"
-            android:background="@drawable/bg_oval_grey"
-            android:clickable="true"
-            android:contentDescription="@string/settings_text"
-            android:focusable="true"
-            android:padding="@dimen/d_4"
-            android:src="@drawable/ic_24_settings"
-            android:visibility="gone" />
-
+        <ru.papino.uikit.components.Button
+            android:id="@+id/buttonUpdate"
+            style="@style/PaPino.Button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:layout_marginHorizontal="@dimen/d_10"
+            android:enabled="false"
+            android:text="@string/save_text" />
     </FrameLayout>
 
 </LinearLayout>
