--- a/restaurant/src/main/res/layout/fragment_profile.xml
+++ b/restaurant/src/main/res/layout/fragment_profile.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="match_parent"
@@ -105,7 +106,8 @@
             android:focusable="true"
             android:padding="@dimen/d_4"
             android:src="@drawable/ic_24_settings"
-            android:visibility="gone" />
+            android:visibility="gone"
+            app:tint="@color/elementPrimaryDarkColor" />
 
     </FrameLayout>
 
