PAPINO-17 Добавить Yandex Map с определением место положения

--- a/restaurant/src/main/res/layout/fragment_basket.xml
+++ b/restaurant/src/main/res/layout/fragment_basket.xml
@@ -147,6 +147,9 @@
                 android:hint="@string/address"
                 android:paddingTop="@dimen/d_10"
                 app:boxBackgroundMode="none"
+                app:endIconDrawable="@drawable/ic_24_pin_drop"
+                app:endIconMode="custom"
+                app:endIconTint="@color/textPrimaryColor"
                 app:hintTextAppearance="@style/PaPino.TextAppearances.Card.Subtitle"
                 app:hintTextColor="@color/text3Color"
                 app:layout_constraintEnd_toEndOf="parent"
