PAPINO-21 Добавить экран О ресторане

--- a/restaurant/src/main/res/menu/bottom_navigation_menu.xml
+++ b/restaurant/src/main/res/menu/bottom_navigation_menu.xml
@@ -23,4 +23,10 @@
         android:icon="@drawable/ic_16_profile"
         android:title="@string/profile_text" />
 
+    <item
+        android:id="@+id/about"
+        android:enabled="true"
+        android:icon="@drawable/ic_24_info"
+        android:title="@string/about_text" />
+
 </menu>
